--- a/src/main/resources/templates/flyerStyles/flyer-creator-style8.html
+++ b/src/main/resources/templates/flyerStyles/flyer-creator-style8.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!--  <style>-->
-<!--    canvas{-->
-<!--      background-image: url("/assets/images/7.jpg");-->
-<!--    }-->
-<!--  </style>-->
-  <link href="/assets/css/theme-rtl.min.css" rel="stylesheet" id="style-rtl">
-  <link href="/assets/css/theme.min.css" rel="stylesheet" id="style-default">
-  <link href="/assets/css/user-rtl.min.css" rel="stylesheet" id="user-style-rtl">
-  <link href="/assets/css/user.min.css" rel="stylesheet" id="user-style-default">
-<!--  <link rel="stylesheet" href="/assets/scss/homevaluation.css"/>-->
-<!--  <link rel="stylesheet" href="/assets/scss/imagecreator.css">-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-          crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    <!--  <style>-->
+    <!--    canvas{-->
+    <!--      background-image: url("/assets/images/7.jpg");-->
+    <!--    }-->
+    <!--  </style>-->
+    <link href="/assets/css/util/theme-rtl.min.css" id="style-rtl" rel="stylesheet">
+    <link href="/assets/css/util/theme.min.css" id="style-default" rel="stylesheet">
+    <link href="/assets/css/user-rtl.min.css" id="user-style-rtl" rel="stylesheet">
+    <link href="/assets/css/user.min.css" id="user-style-default" rel="stylesheet">
+    <!--  <link rel="stylesheet" href="/assets/scss/homevaluation.css"/>-->
+    <!--  <link rel="stylesheet" href="/assets/scss/imagecreator.css">-->
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" rel="stylesheet">
+    <script crossorigin="anonymous"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
           integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
           crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
@@ -56,7 +56,7 @@
   <div id="canvas-container">
     <canvas id="canvas" class="mx-8" width="1080" height="1080"></canvas>
   </div>
-  <img src="/img/Background.png" id="background-image" style="display: none">
+    <img id="background-image" src="/assets/img/Background.png" style="display: none">
 <!--  <div id="controls">-->
 <!--    <p class="title_form">Controls</p>-->
 <!--    <label for="image-file-input" class="upload_position">-->
@@ -166,6 +166,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/4.4.0/fabric.min.js"></script>
-<script src="/js/redactor8.js"></script>
+<script src="/assets/js/redactor8.js"></script>
 </body>
 </html>
